--- a/gRpcConsumer/build.gradle
+++ b/gRpcConsumer/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile "io.grpc:grpc-stub:${grpcVersion}"
     compile "io.grpc:grpc-netty:${grpcVersion}"
     compile "io.grpc:grpc-services:${grpcVersion}"
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
