--- a/gRpcServer/build.gradle
+++ b/gRpcServer/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     compile "io.grpc:grpc-stub:${grpcVersion}"
     compile "io.grpc:grpc-netty:${grpcVersion}"
     compile "io.grpc:grpc-services:${grpcVersion}"
-    compile 'org.projectlombok:lombok:1.18.4'
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
